# crossabc

./: .gitignore  LICENSE  README.md  crossabc.py  detail.ipynb  example.csv  example.ipynb  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  generate_requirements.yml  test.yml
crossabc/: __init__.py  crossabc.py
requirements/: example.txt
tests/: test_crossabc.py
