[tool.poetry]
name = "crossabc-core"
version = "0.1.0"
description = "Easily Cross ABC analyzer"
authors = ["hrt0809 <hrt.ueda0809@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.23.4"
pandas = ">=1.5.1"

[tool.poetry.dev-dependencies]
black = "*"
flake8-bugbear = "*"
pyproject-flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Following configuration are added manually
[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"

[tool.black]
line-length = 119
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .venv
)
'''

[tool.mypy]
# common
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_column_numbers = true
show_error_context = true
# warning
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tools.isort]
line_length = 119
profile = "black"
