[tool.poetry]
name = "crossabc"
version = "0.1.3"
description = "Easily CrossABC analyzer"
authors = ["Hiroto Ueda <hrt.ueda0809@gmail.com>"]
maintainers = ["Hiroto Ueda <hrt.ueda0809@gmail.com>"]
homepage = "https://github.com/hrt0809/crossabc"
repository = "https://github.com/hrt0809/crossabc"
documentation = "https://github.com/hrt0809/crossabc"
license = "MIT"
readme = "README.md"
packages = [
    { include="src"}
]
include = [
    { path = "tests", format = "sdist" }
]
keywords = ["data-analysis", "pareto-analysis", "ABC-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.23.4"
pandas = ">=1.5.1"

[tool.poetry.dev-dependencies]
black = ">=22.10"
flake8-bugbear = ">=22.10"
pyproject-flake8 = ">=5.0.4.post1"
isort = ">=4.3"
mypy = ">=0.990"
pytest = ">=7.2.0"

[tool.poetry.scripts]
crossabc = "crossabc.crossabc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Following configuration are added manually
[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"

[tool.black]
line-length = 119
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .venv
)
'''

[tool.mypy]
# common
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_column_numbers = true
show_error_context = true
# warning
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tools.isort]
line_length = 119
profile = "black"
